ready for first prototype deploy

--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
     <meta name="scaffolded-by" content="https://github.com/google/stagehand">
     <title>MagicalGirlSim</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/navbar.css">
     <link rel="icon" href="favicon.ico">
     <script defer src="scripts/main.dart" type="application/dart"></script>
     <script defer src="packages/browser/dart.js"></script>
@@ -16,6 +17,13 @@
 <body>
 
   <div id="output"></div>
+  <div id = "navbar"></div>
   <a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by Rawpixel.com - Freepik.com</a>
+  <audio id = "bgAudio"  autoplay loop>
+      <source src="Music/Magical_Theme.ogg" type="audio/ogg">
+      <source src="Music/Magical_Theme.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+  </audio>
+
 </body>
 </html>
