--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -28,19 +28,9 @@
   <div id="output"></div>
   TODO:
 
-  <li>remove current game shit</li>
-
-  <li>
-        Half Sized Magical Girl Far Left, flipped turnways
-  </li>
-
-  <li>
-        Full Sized magical girl right (placeholder, eventually monster)
-  </li>
-
-  <li>
-        MENU BOXES BOTTOM
-  </li>
+  <li>Simple css Menu Box with Weapon, Magic, Companion options</li>
+  <li>blood price option, click to open new box</li>
+  <li>blood price sub obtions, click to opten THIRD box, with button for "contract" or some shit</li>
 
 
   <div id = "navbar"></div>
