--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -29,8 +29,13 @@
   TODO:
 
   <li>Simple css Menu Box with Weapon, Magic, Companion options</li>
-  <li>blood price option, click to open new box</li>
+  <li>blood price option, click to open new box (hp bargain, weapon bargain, magic bargain, companion bargain, legacy bargain)</li>
+  <li>magical girl and monster have hp over both their heads</li>
   <li>blood price sub obtions, click to opten THIRD box, with button for "contract" or some shit</li>
+  <li>clicking weapon uses two stats to calc damage (displayed over monster head) and has popup of text</li>
+  <li>clicking magic uses two stats to calc damage (displayed over monster head) and has popup of text</li>
+  <li>clicking companion uses two stats to calc damage (displayed over monster head) and has popup of text</li>
+
 
 
   <div id = "navbar"></div>
