--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -28,13 +28,13 @@
   <div id="output"></div>
   TODO:
 
-  <li>Simple css Menu Box with Weapon, Magic, Companion options</li>
   <li>blood price option, click to open new box (hp bargain, weapon bargain, magic bargain, companion bargain, legacy bargain)</li>
   <li>magical girl and monster have hp over both their heads</li>
-  <li>blood price sub obtions, click to opten THIRD box, with button for "contract" or some shit</li>
+  <li>blood price sub obtions, click to opten THIRD box with desc, with button for "contract" or some shit</li>
   <li>clicking weapon uses two stats to calc damage (displayed over monster head) and has popup of text</li>
   <li>clicking magic uses two stats to calc damage (displayed over monster head) and has popup of text</li>
   <li>clicking companion uses two stats to calc damage (displayed over monster head) and has popup of text</li>
+  <li> clicking contract causes the contract to be applied. (displayed hp changes, when you use your weapon/magic/companion the text changes, etc). can have more than one contract at a time</li>
 
 
 
