--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -34,6 +34,10 @@
   <li>clicking companion uses two stats to calc damage (displayed over monster head) and has popup of text</li>
   <li> clicking contract causes the contract to be applied. (displayed hp changes, when you use your weapon/magic/companion the text changes, etc). can have more than one contract at a time</li>
   <li> start screen, click anywhere to start and also play music</li>
+  <li>if the girl dies, one of two endings, new girl</li>
+  <li>keep track of all girls, show them at ending?</li>
+  <li>if monster dies cutscene</li>
+  <li>BLOOD BIlL post fight</li>
   <li>cutscenes</li>
   <li>effects on monster/from attacks</li>
 
