can click weapon and do damage but no animation or anything

--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -38,7 +38,7 @@
   <li>if monster dies cutscene</li>
   <li>BLOOD BIlL post fight</li>
   <li>cutscenes</li>
-  <li>effects on monster/from attacks</li>
+  <li>effects on monster/from attacks (monsters breathe? have censortship floating around)</li>
 
 
   <div id = "navbar"></div>
