rooftop mk4, css tweaks, sun glow

--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -21,6 +21,13 @@
     <link rel="icon" href="favicon.ico">
     <script defer src="scripts/ludum.dart.js" type="application/javascript"></script>
     <script defer src="packages/browser/dart.js"></script>
+    <!--[if IE]>
+    <style>
+        .sunGlow {
+            display:none;
+        }
+    </style>
+    <![endif]-->
 </head>
 
 <body>
