--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -35,10 +35,10 @@
   <div id="output"></div>
   TODO:
 
-  <li>clicking weapon uses two stats to calc damage (displayed over monster head) and has popup of text</li>
   <li>clicking magic uses two stats to calc damage (displayed over monster head) and has popup of text</li>
   <li>clicking companion uses two stats to calc damage (displayed over monster head) and has popup of text</li>
   <li> clicking contract causes the contract to be applied. (displayed hp changes, when you use your weapon/magic/companion the text changes, etc). can have more than one contract at a time</li>
+  <li> load attack text from text engine.</li>
   <li> start screen, click anywhere to start and also play music</li>
   <li>if the girl dies, one of two endings, new girl</li>
   <li>keep track of all girls, show them at ending?</li>
