update todo pile

--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -35,9 +35,8 @@
   <div id="output"></div>
   TODO:
 
-  <li>clicking magic uses two stats to calc damage (displayed over monster head) and has popup of text</li>
-  <li>clicking companion uses two stats to calc damage (displayed over monster head) and has popup of text</li>
-  <li> clicking contract causes the contract to be applied. (displayed hp changes, when you use your weapon/magic/companion the text changes, etc). can have more than one contract at a time</li>
+  <li>wire up monster dollset in doll lib</li>
+  <li>use monster dollset</li>
   <li> load attack text from text engine.</li>
   <li> start screen, click anywhere to start and also play music</li>
   <li>if the girl dies, one of two endings, new girl</li>
@@ -45,7 +44,7 @@
   <li>if monster dies cutscene</li>
   <li>BLOOD BIlL post fight</li>
   <li>cutscenes</li>
-  <li>effects on monster/from attacks (monsters breathe? have censortship floating around)</li>
+  <li>effects on monster/from attacks (monsters breathe? have censortship floating around) pl is looking into this</li>
 
 
   <div id = "navbar"></div>
