--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -37,6 +37,7 @@
 
   <li>wire up monster dollset in doll lib</li>
   <li>use monster dollset</li>
+  <li>have all the blood contracts actually work (can have more than one of each type at a time)</li>
   <li> load attack text from text engine.</li>
   <li> start screen, click anywhere to start and also play music</li>
   <li>if the girl dies, one of two endings, new girl</li>
