Look into the void

--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -23,7 +23,7 @@
     <script defer src="packages/browser/dart.js"></script>
     <!--[if IE]>
     <style>
-        .sunGlow {
+        .noIE {
             display:none;
         }
     </style>
