--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -44,6 +44,7 @@
   <li>BLOOD BIlL post fight</li>
   <li>cutscenes</li>
   <li>effects on monster/from attacks (monsters breathe? have censortship floating around) pl is looking into this</li>
+  <li>if companion gets enough pacts to one shot a monster, secret ending</li>
 
 
   <div id = "navbar"></div>
