kaching when you blood price

--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -33,15 +33,21 @@
 <body>
 
   <div id="output"></div>
-  TODO:
+  TODO:@par
 
-  <li>have all the blood contracts actually work (can have more than one of each type at a time)</li>
-  <li> load attack text from text engine.</li>
-  <li> start screen, click anywhere to start and also play music</li>
-  <li>if the girl dies, one of two endings, new girl</li>
-  <li>keep track of all girls, show them at ending?</li>
-  <li>if monster dies cutscene</li>
+  <li>pl's attack effects</li>
+  <li>Monster FIGHTS BACK (girl goes first tho). happens X seconds after your own attack. </li>
+  <li>monster can die (causes blood bill to tally)</li>
   <li>BLOOD BIlL post fight</li>
+  <li>girl can die from monster attack (triggers cutscene of recruiting nwe girl to fight same monster)</li>
+  <li>girl can die from BLOOD BILL (triggers cutscene of her death, and then the companion recruiting new girl to fight a mysterious new monster)</li>
+  <li>if monster dies and girl survives blood bill, LOOP OVER, get GOOD ENDING</li>
+  <li>SOUND EFFECTS FOR PHYSICAL/MAGICAL attacks</li>
+  <li>If companion powered up to where it can one shot the monster, LOOP OVER, get BAD ENDING</li>
+  <li> start screen, click anywhere to start and also play music</li>
+  <li>keep track of all girls, show them at ending?</li>
+  <li>don't let you click button until monster attack is over</li>
+  <li> load attack text from text engine.</li>
   <li>cutscenes</li>
   <li>effects on monster/from attacks (monsters breathe? have censortship floating around) pl is looking into this</li>
   <li>if companion gets enough pacts to one shot a monster, secret ending</li>
