maybe my dream of killing magical girls has come true

--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -45,7 +45,7 @@
   <li>keep track of all girls, show them at ending?</li>
   <li>don't let you click button until monster attack is over</li>
   <li> load attack text from text engine.</li>
-  <li>cutscenes</li>
+  <li>cutscenes (hatched chick is actually much bigger than he looks for use there)</li>
   <li>effects on monster/from attacks (monsters breathe? have censortship floating around) pl is looking into this</li>
   <li>if companion gets enough pacts to one shot a monster, secret ending</li>
 
