--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -34,7 +34,8 @@
 
   <div id="output"></div>
   TODO:@par
-  <li>girl can die from monster attack (triggers cutscene of recruiting nwe girl to fight same monster)</li>
+  <li>each time a new girl spawns , up the layer mask thing</li>
+  <li>each time a new girl spawns, load up a new corrupt soundtrack</li>
   <li>monster can die (causes blood bill to tally)</li>
   <li>BLOOD BIlL post fight</li>
   <li>girl can die from BLOOD BILL (triggers cutscene of her death, and then the companion recruiting new girl to fight a mysterious new monster)</li>
