manics creepy music wired in

--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -34,7 +34,7 @@
 
   <div id="output"></div>
   TODO:@par
-  <li>each time a new girl spawns , up the layer mask thing</li>
+  <li> start screen, click anywhere to start and also play music</li>
   <li>each time a new girl spawns, load up a new corrupt soundtrack</li>
   <li>monster can die (causes blood bill to tally)</li>
   <li>BLOOD BIlL post fight</li>
@@ -42,21 +42,16 @@
   <li>if monster dies and girl survives blood bill, LOOP OVER, get GOOD ENDING</li>
   <li>SOUND EFFECTS FOR PHYSICAL/MAGICAL attacks</li>
   <li>If companion powered up to where it can one shot the monster, LOOP OVER, get BAD ENDING</li>
-  <li> start screen, click anywhere to start and also play music</li>
   <li>keep track of all girls, show them at ending?</li>
   <li>don't let you click button until monster attack is over</li>
   <li> load attack text from text engine.</li>
   <li>cutscenes (hatched chick is actually much bigger than he looks for use there)</li>
   <li>effects on monster/from attacks (monsters breathe? have censortship floating around) pl is looking into this</li>
   <li>if companion gets enough pacts to one shot a monster, secret ending</li>
+  <li>put things in o3 mode</li>
 
 
   <div id = "navbar"></div>
-  <audio id = "bgAudio"  autoplay loop>
-      <source src="Music/Magical_Theme.ogg" type="audio/ogg">
-      <source src="Music/Magical_Theme.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-  </audio>
 
 </body>
 </html>
