--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -33,22 +33,14 @@
 <body>
 
   <div id="output"></div>
-  TODO:@par
-  <li>cutscene add element to bottom</li>
+  TODO:
   <li>test blood bill</li>
-  <li>integrate with yn's creepy garbled human voice</li>
-  <li>monster can die (causes blood bill to tally)</li>
-  <li>BLOOD BIlL post fight</li>
-  <li>girl can die from BLOOD BILL (triggers cutscene of her death, and then the companion recruiting new girl to fight a mysterious new monster)</li>
   <li>if monster dies and girl survives blood bill, LOOP OVER, get GOOD ENDING</li>
   <li>If companion powered up to where it can one shot the monster, LOOP OVER, get BAD ENDING</li>
   <li>keep track of all girls, show them at ending?</li>
-  <li>don't let you click button until monster attack is over</li>
   <li> load attack text from text engine.</li>
   <li>expanded magical girl palette options from io (also unnatural hair color)</li>
-  <li>cutscenes (hatched chick is actually much bigger than he looks for use there). first one is super optimistic. companion never actually seems upset or surprised by all the deaths.</li>
   <li>if you die with no blood debt, get pay to win popup. </li>
-  <li>effects on monster/from attacks (monsters breathe? have censortship floating around) pl is looking into this</li>
   <li>if companion gets enough pacts to one shot a monster, secret ending</li>
   <li>put things in o3 mode</li>
 
