--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -35,6 +35,7 @@
   <div id="output"></div>
   TODO:
   <li>test blood bill</li>
+  <li>companion thinks to itself about tips and tricks between girls like. "Looks like that last girl became too powerful. This monster is insanely hard."</li>
   <li>if monster dies and girl survives blood bill, LOOP OVER, get GOOD ENDING</li>
   <li>If companion powered up to where it can one shot the monster, LOOP OVER, get BAD ENDING</li>
   <li>keep track of all girls, show them at ending?</li>
