minor ui bug fix

--- a/web/ludum_dare_spring_2019.html
+++ b/web/ludum_dare_spring_2019.html
@@ -34,7 +34,10 @@
 
   <div id="output"></div>
   TODO:
-  <li>legacy blood bill not working. health def does.</li>
+  <li>winning endings are really corrupt with girls living and dying simultanesously?</li>
+  <li>girls can die of zero blood debt???</li>
+  <li>buyin gmagic pact doesn't update graphic</li>
+  <li>i am reasonably sure that sometimes the magical girls spawn dead</li>
   <li>companion thinks to itself about tips and tricks between girls like. "Looks like that last girl became too powerful. This monster is insanely hard."</li>
   <li>if monster dies and girl survives blood bill, LOOP OVER, get GOOD ENDING</li>
   <li>If companion powered up to where it can one shot the monster, LOOP OVER, get BAD ENDING</li>
