ready to see the epilogue

--- a/web/indexold.html
+++ b/web/indexold.html
@@ -15,36 +15,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="scaffolded-by" content="https://github.com/google/stagehand">
-    <title>Mahou Shoujo Monster: Promised Fate</title>
+    <title>MagicalGirlSim</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="icon" href="favicon.ico">
-    <script defer src="scripts/ludum.dart.js" type="application/javascript"></script>
+    <script defer src="scripts/main.dart" type="application/dart"></script>
     <script defer src="packages/browser/dart.js"></script>
-    <!--[if IE]>
-    <style>
-        .noIE {
-            display:none;
-        }
-    </style>
-    <![endif]-->
 </head>
 
 <body>
 
   <div id="output"></div>
-  TODO:
-  <li>if monster dies and girl survives blood bill, LOOP OVER, get GOOD ENDING</li>
-  <li>:hatch_chick: size depends on how many pacts it has</li>
-  <li>If companion powered up to where it can one shot the monster, LOOP OVER, get BAD ENDING</li>
-  <li>keep track of all girls, show them at ending?</li>
-  <li>pixel effect on random parts of monster?</li>
-  <li> load attack text from text engine.</li>
-  <li>expanded magical girl palette options from io (also unnatural hair color)</li>
-  <li>put things in o3 mode</li>
-
-
   <div id = "navbar"></div>
+  <a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by Rawpixel.com - Freepik.com</a>
+  <audio id = "bgAudio"  autoplay loop>
+      <source src="Music/Magical_Theme.ogg" type="audio/ogg">
+      <source src="Music/Magical_Theme.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+  </audio>
 
 </body>
 </html>
