--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,8 @@
   <div id="output"></div>
   TODO:
   <li>if monster dies and girl survives blood bill, LOOP OVER, get GOOD ENDING</li>
+  <li>don't let final ending be clicked through</li>
+  <li> wait a second before doing monster death shit</li>
   <li>:hatch_chick: size depends on how many pacts it has</li>
   <li>If companion powered up to where it can one shot the monster, LOOP OVER, get BAD ENDING</li>
   <li>keep track of all girls, show them at ending?</li>
