--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,7 @@
   <div id="output"></div>
   TODO:
   <li>if monster dies and girl survives blood bill, LOOP OVER, get GOOD ENDING</li>
+  <li>don't auto apply companion bonus unless its a companion attack</li>
   <li>don't let final ending be clicked through</li>
   <li> wait a second before doing monster death shit</li>
   <li>:hatch_chick: size depends on how many pacts it has</li>
