--- a/web/index.html
+++ b/web/index.html
@@ -37,10 +37,8 @@
   <li> wait a second before doing monster death shit</li>
   <li>:hatch_chick: size depends on how many pacts it has</li>
   <li>If companion powered up to where it can one shot the monster, LOOP OVER, get BAD ENDING</li>
-  <li>pixel effect on random parts of monster?</li>
-  <li> load attack text from text engine.</li>
+  <li> (if time) load attack text from text engine.</li>
   <li>expanded magical girl palette options from io (also unnatural hair color)</li>
-  <li>put things in o3 mode</li>
 
 
   <div id = "navbar"></div>
