--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
   <div id="output"></div>
   TODO:
   <li>:hatch_chick: size depends on how many pacts it has</li>
-  <li>If companion powered up to where it can one shot the monster, LOOP OVER, get BAD ENDING</li>
+  <li>replay button in both endings</li>
   <div id = "navbar"></div>
 
 </body>
