--- a/web/nicesim.html
+++ b/web/nicesim.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="icon" href="favicon.ico">
-    <script defer src="scripts/main.dart" type="application/dart"></script>
+    <script defer src="scripts/main.dart.js" type="application/javascript"></script>
     <script defer src="packages/browser/dart.js"></script>
 </head>
 
